// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Header /> should open and close the menu 1`] = `
.emotion-0 {
  position: fixed;
  z-index: 50;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-flex-direction: row-reverse;
  -ms-flex-direction: row-reverse;
  flex-direction: row-reverse;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  padding: 0.5rem;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 3rem;
  width: 3rem;
  cursor: pointer;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  box-sizing: border-box;
  border-radius: 0.375rem;
  border-bottom-right-radius: 0.125rem;
  border-top-left-radius: 0.125rem;
  --tw-bg-opacity: 0.75;
  background-color: rgb(255 255 255 / var(--tw-bg-opacity));
  transition-property: all;
  transition-timing-function: cubic-bezier(0, 0, 0.2, 1);
  transition-duration: 300ms;
  visibility: visible;
}

.emotion-2 {
  height: 2rem;
  width: 2rem;
}

.emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 3rem;
  width: 3rem;
  cursor: pointer;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  position: absolute;
  top: 0px;
  height: 100vh;
  width: 100vw;
  background-color: transparent;
  visibility: hidden;
  left: 100%;
}

.emotion-4 {
  position: fixed;
  top: 0px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100vh;
  width: 18rem;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
  --tw-bg-opacity: 0.9;
  background-color: rgb(255 255 255 / var(--tw-bg-opacity));
  --tw-shadow: 0 1px 3px 0 rgb(0 0 0 / 0.1),0 1px 2px -1px rgb(0 0 0 / 0.1);
  --tw-shadow-colored: 0 1px 3px 0 var(--tw-shadow-color),0 1px 2px -1px var(--tw-shadow-color);
  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000),var(--tw-ring-shadow, 0 0 #0000),var(--tw-shadow);
  transition-property: all;
  transition-timing-function: cubic-bezier(0.4, 0, 1, 1);
  transition-duration: 300ms;
  visibility: hidden;
  right: -20rem;
}

.emotion-5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 3rem;
  width: 3rem;
  cursor: pointer;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-7 {
  font-size: 1rem;
  line-height: 1.5rem;
  --tw-text-opacity: 1;
  color: rgb(90 94 0 / var(--tw-text-opacity));
  text-decoration-line: none;
  transition-property: color,background-color,border-color,text-decoration-color,fill,stroke,opacity,box-shadow,transform,filter,backdrop-filter;
  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
  transition-duration: 150ms;
  margin-top: 1.5rem;
  width: 100%;
  padding-left: 2rem;
  font-size: 1.875rem;
  line-height: 2.25rem;
  --tw-text-opacity: 1;
  color: rgb(0 0 0 / var(--tw-text-opacity));
}

.emotion-7:hover {
  text-decoration-line: underline;
}

.emotion-7:focus {
  text-decoration-line: underline;
}

.emotion-7:active {
  text-decoration-line: underline;
}

.emotion-7:first-of-type {
  margin-top: 0px;
}

.emotion-7:hover {
  --tw-text-opacity: 1;
  color: rgb(0 104 69 / var(--tw-text-opacity));
}

.emotion-7:active {
  --tw-text-opacity: 1;
  color: rgb(0 104 69 / var(--tw-text-opacity));
}

.emotion-10 {
  grid-column-start: 3;
  font-family: "Signika Negative";
  font-size: 2.25rem;
  line-height: 2.5rem;
  font-weight: 700;
  border-radius: 0.375rem;
  border-bottom-left-radius: 0.125rem;
  border-top-right-radius: 0.125rem;
  --tw-bg-opacity: 0.75;
  background-color: rgb(255 255 255 / var(--tw-bg-opacity));
  padding: 0.5rem;
  visibility: visible;
}

<header
  class="emotion-0"
>
  <button
    aria-label="Avaa valikko"
    class="emotion-1"
  >
    <svg
      aria-hidden="true"
      class="emotion-2"
    >
      <use
        xlink:href="#icon-bars"
      />
    </svg>
  </button>
  <button
    aria-hidden="true"
    class="emotion-3"
  />
  <nav
    aria-expanded="false"
    class="emotion-4"
  >
    <button
      aria-label="Sulje valikko"
      class="emotion-5"
    >
      <svg
        aria-hidden="true"
        class="emotion-2"
      >
        <use
          xlink:href="#icon-close"
        />
      </svg>
    </button>
    <a
      class="emotion-7"
      href="/minusta/"
    >
      Minusta
    </a>
    <a
      class="emotion-7"
      href="/blogi/"
    >
      Blogi
    </a>
    <a
      class="emotion-7"
      href="/ota-yhteytta/"
    >
      Ota yhteyttä
    </a>
  </nav>
  <h2
    class="emotion-10"
    id="lauri-lavanti"
  >
    Lauri Lavanti
  </h2>
</header>
`;

exports[`<Header /> should render 1`] = `
.emotion-0 {
  position: fixed;
  z-index: 50;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-flex-direction: row-reverse;
  -ms-flex-direction: row-reverse;
  flex-direction: row-reverse;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  padding: 0.5rem;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 3rem;
  width: 3rem;
  cursor: pointer;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  box-sizing: border-box;
  border-radius: 0.375rem;
  border-bottom-right-radius: 0.125rem;
  border-top-left-radius: 0.125rem;
  --tw-bg-opacity: 0.75;
  background-color: rgb(255 255 255 / var(--tw-bg-opacity));
  transition-property: all;
  transition-timing-function: cubic-bezier(0, 0, 0.2, 1);
  transition-duration: 300ms;
  visibility: visible;
}

.emotion-2 {
  height: 2rem;
  width: 2rem;
}

.emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 3rem;
  width: 3rem;
  cursor: pointer;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  position: absolute;
  top: 0px;
  height: 100vh;
  width: 100vw;
  background-color: transparent;
  visibility: hidden;
  left: 100%;
}

.emotion-4 {
  position: fixed;
  top: 0px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100vh;
  width: 18rem;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
  --tw-bg-opacity: 0.9;
  background-color: rgb(255 255 255 / var(--tw-bg-opacity));
  --tw-shadow: 0 1px 3px 0 rgb(0 0 0 / 0.1),0 1px 2px -1px rgb(0 0 0 / 0.1);
  --tw-shadow-colored: 0 1px 3px 0 var(--tw-shadow-color),0 1px 2px -1px var(--tw-shadow-color);
  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000),var(--tw-ring-shadow, 0 0 #0000),var(--tw-shadow);
  transition-property: all;
  transition-timing-function: cubic-bezier(0.4, 0, 1, 1);
  transition-duration: 300ms;
  visibility: hidden;
  right: -20rem;
}

.emotion-5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 3rem;
  width: 3rem;
  cursor: pointer;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-7 {
  font-size: 1rem;
  line-height: 1.5rem;
  --tw-text-opacity: 1;
  color: rgb(90 94 0 / var(--tw-text-opacity));
  text-decoration-line: none;
  transition-property: color,background-color,border-color,text-decoration-color,fill,stroke,opacity,box-shadow,transform,filter,backdrop-filter;
  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
  transition-duration: 150ms;
  margin-top: 1.5rem;
  width: 100%;
  padding-left: 2rem;
  font-size: 1.875rem;
  line-height: 2.25rem;
  --tw-text-opacity: 1;
  color: rgb(0 0 0 / var(--tw-text-opacity));
}

.emotion-7:hover {
  text-decoration-line: underline;
}

.emotion-7:focus {
  text-decoration-line: underline;
}

.emotion-7:active {
  text-decoration-line: underline;
}

.emotion-7:first-of-type {
  margin-top: 0px;
}

.emotion-7:hover {
  --tw-text-opacity: 1;
  color: rgb(0 104 69 / var(--tw-text-opacity));
}

.emotion-7:active {
  --tw-text-opacity: 1;
  color: rgb(0 104 69 / var(--tw-text-opacity));
}

.emotion-10 {
  grid-column-start: 3;
  font-family: "Signika Negative";
  font-size: 2.25rem;
  line-height: 2.5rem;
  font-weight: 700;
  border-radius: 0.375rem;
  border-bottom-left-radius: 0.125rem;
  border-top-right-radius: 0.125rem;
  --tw-bg-opacity: 0.75;
  background-color: rgb(255 255 255 / var(--tw-bg-opacity));
  padding: 0.5rem;
  visibility: visible;
}

<header
  class="emotion-0"
>
  <button
    aria-label="Avaa valikko"
    class="emotion-1"
  >
    <svg
      aria-hidden="true"
      class="emotion-2"
    >
      <use
        xlink:href="#icon-bars"
      />
    </svg>
  </button>
  <button
    aria-hidden="true"
    class="emotion-3"
  />
  <nav
    aria-expanded="false"
    class="emotion-4"
  >
    <button
      aria-label="Sulje valikko"
      class="emotion-5"
    >
      <svg
        aria-hidden="true"
        class="emotion-2"
      >
        <use
          xlink:href="#icon-close"
        />
      </svg>
    </button>
    <a
      class="emotion-7"
      href="/minusta/"
    >
      Minusta
    </a>
    <a
      class="emotion-7"
      href="/blogi/"
    >
      Blogi
    </a>
    <a
      class="emotion-7"
      href="/ota-yhteytta/"
    >
      Ota yhteyttä
    </a>
  </nav>
  <h2
    class="emotion-10"
    id="lauri-lavanti"
  >
    Lauri Lavanti
  </h2>
</header>
`;

exports[`<Header /> should render front page 1`] = `
.emotion-0 {
  position: fixed;
  z-index: 50;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-flex-direction: row-reverse;
  -ms-flex-direction: row-reverse;
  flex-direction: row-reverse;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  padding: 0.5rem;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 3rem;
  width: 3rem;
  cursor: pointer;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  box-sizing: border-box;
  border-radius: 0.375rem;
  border-bottom-right-radius: 0.125rem;
  border-top-left-radius: 0.125rem;
  --tw-bg-opacity: 0.75;
  background-color: rgb(255 255 255 / var(--tw-bg-opacity));
  transition-property: all;
  transition-timing-function: cubic-bezier(0, 0, 0.2, 1);
  transition-duration: 300ms;
  visibility: visible;
}

.emotion-2 {
  height: 2rem;
  width: 2rem;
}

.emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 3rem;
  width: 3rem;
  cursor: pointer;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  position: absolute;
  top: 0px;
  height: 100vh;
  width: 100vw;
  background-color: transparent;
  visibility: hidden;
  left: 100%;
}

.emotion-4 {
  position: fixed;
  top: 0px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100vh;
  width: 18rem;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
  --tw-bg-opacity: 0.9;
  background-color: rgb(255 255 255 / var(--tw-bg-opacity));
  --tw-shadow: 0 1px 3px 0 rgb(0 0 0 / 0.1),0 1px 2px -1px rgb(0 0 0 / 0.1);
  --tw-shadow-colored: 0 1px 3px 0 var(--tw-shadow-color),0 1px 2px -1px var(--tw-shadow-color);
  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000),var(--tw-ring-shadow, 0 0 #0000),var(--tw-shadow);
  transition-property: all;
  transition-timing-function: cubic-bezier(0.4, 0, 1, 1);
  transition-duration: 300ms;
  visibility: hidden;
  right: -20rem;
}

.emotion-5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 3rem;
  width: 3rem;
  cursor: pointer;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-7 {
  font-size: 1rem;
  line-height: 1.5rem;
  --tw-text-opacity: 1;
  color: rgb(90 94 0 / var(--tw-text-opacity));
  text-decoration-line: none;
  transition-property: color,background-color,border-color,text-decoration-color,fill,stroke,opacity,box-shadow,transform,filter,backdrop-filter;
  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
  transition-duration: 150ms;
  margin-top: 1.5rem;
  width: 100%;
  padding-left: 2rem;
  font-size: 1.875rem;
  line-height: 2.25rem;
  --tw-text-opacity: 1;
  color: rgb(0 0 0 / var(--tw-text-opacity));
}

.emotion-7:hover {
  text-decoration-line: underline;
}

.emotion-7:focus {
  text-decoration-line: underline;
}

.emotion-7:active {
  text-decoration-line: underline;
}

.emotion-7:first-of-type {
  margin-top: 0px;
}

.emotion-7:hover {
  --tw-text-opacity: 1;
  color: rgb(0 104 69 / var(--tw-text-opacity));
}

.emotion-7:active {
  --tw-text-opacity: 1;
  color: rgb(0 104 69 / var(--tw-text-opacity));
}

.emotion-10 {
  grid-column-start: 3;
  font-family: "Signika Negative";
  font-size: 2.25rem;
  line-height: 2.5rem;
  font-weight: 700;
  border-radius: 0.375rem;
  border-bottom-left-radius: 0.125rem;
  border-top-right-radius: 0.125rem;
  --tw-bg-opacity: 0.75;
  background-color: rgb(255 255 255 / var(--tw-bg-opacity));
  padding: 0.5rem;
  visibility: hidden;
}

<header
  class="emotion-0"
>
  <button
    aria-label="Avaa valikko"
    class="emotion-1"
  >
    <svg
      aria-hidden="true"
      class="emotion-2"
    >
      <use
        xlink:href="#icon-bars"
      />
    </svg>
  </button>
  <button
    aria-hidden="true"
    class="emotion-3"
  />
  <nav
    aria-expanded="false"
    class="emotion-4"
  >
    <button
      aria-label="Sulje valikko"
      class="emotion-5"
    >
      <svg
        aria-hidden="true"
        class="emotion-2"
      >
        <use
          xlink:href="#icon-close"
        />
      </svg>
    </button>
    <a
      class="emotion-7"
      href="/minusta/"
    >
      Minusta
    </a>
    <a
      class="emotion-7"
      href="/blogi/"
    >
      Blogi
    </a>
    <a
      class="emotion-7"
      href="/ota-yhteytta/"
    >
      Ota yhteyttä
    </a>
  </nav>
  <h2
    class="emotion-10"
    id="lauri-lavanti"
  >
    Lauri Lavanti
  </h2>
</header>
`;

exports[`<Header /> should render opened menu 1`] = `
.emotion-0 {
  position: fixed;
  z-index: 50;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-flex-direction: row-reverse;
  -ms-flex-direction: row-reverse;
  flex-direction: row-reverse;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  padding: 0.5rem;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 3rem;
  width: 3rem;
  cursor: pointer;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  box-sizing: border-box;
  border-radius: 0.375rem;
  border-bottom-right-radius: 0.125rem;
  border-top-left-radius: 0.125rem;
  --tw-bg-opacity: 0.75;
  background-color: rgb(255 255 255 / var(--tw-bg-opacity));
  transition-property: all;
  transition-timing-function: cubic-bezier(0, 0, 0.2, 1);
  transition-duration: 300ms;
  visibility: hidden;
}

.emotion-2 {
  height: 2rem;
  width: 2rem;
}

.emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 3rem;
  width: 3rem;
  cursor: pointer;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  position: absolute;
  top: 0px;
  height: 100vh;
  width: 100vw;
  background-color: transparent;
  visibility: visible;
  left: 0px;
}

.emotion-4 {
  position: fixed;
  top: 0px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100vh;
  width: 18rem;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
  --tw-bg-opacity: 0.9;
  background-color: rgb(255 255 255 / var(--tw-bg-opacity));
  --tw-shadow: 0 1px 3px 0 rgb(0 0 0 / 0.1),0 1px 2px -1px rgb(0 0 0 / 0.1);
  --tw-shadow-colored: 0 1px 3px 0 var(--tw-shadow-color),0 1px 2px -1px var(--tw-shadow-color);
  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000),var(--tw-ring-shadow, 0 0 #0000),var(--tw-shadow);
  transition-property: all;
  transition-timing-function: cubic-bezier(0.4, 0, 1, 1);
  transition-duration: 300ms;
  visibility: visible;
  right: 0px;
}

.emotion-5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 3rem;
  width: 3rem;
  cursor: pointer;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-7 {
  font-size: 1rem;
  line-height: 1.5rem;
  --tw-text-opacity: 1;
  color: rgb(90 94 0 / var(--tw-text-opacity));
  text-decoration-line: none;
  transition-property: color,background-color,border-color,text-decoration-color,fill,stroke,opacity,box-shadow,transform,filter,backdrop-filter;
  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
  transition-duration: 150ms;
  margin-top: 1.5rem;
  width: 100%;
  padding-left: 2rem;
  font-size: 1.875rem;
  line-height: 2.25rem;
  --tw-text-opacity: 1;
  color: rgb(0 0 0 / var(--tw-text-opacity));
}

.emotion-7:hover {
  text-decoration-line: underline;
}

.emotion-7:focus {
  text-decoration-line: underline;
}

.emotion-7:active {
  text-decoration-line: underline;
}

.emotion-7:first-of-type {
  margin-top: 0px;
}

.emotion-7:hover {
  --tw-text-opacity: 1;
  color: rgb(0 104 69 / var(--tw-text-opacity));
}

.emotion-7:active {
  --tw-text-opacity: 1;
  color: rgb(0 104 69 / var(--tw-text-opacity));
}

.emotion-10 {
  grid-column-start: 3;
  font-family: "Signika Negative";
  font-size: 2.25rem;
  line-height: 2.5rem;
  font-weight: 700;
  border-radius: 0.375rem;
  border-bottom-left-radius: 0.125rem;
  border-top-right-radius: 0.125rem;
  --tw-bg-opacity: 0.75;
  background-color: rgb(255 255 255 / var(--tw-bg-opacity));
  padding: 0.5rem;
  visibility: visible;
}

<header
  class="emotion-0"
>
  <button
    aria-label="Avaa valikko"
    class="emotion-1"
  >
    <svg
      aria-hidden="true"
      class="emotion-2"
    >
      <use
        xlink:href="#icon-bars"
      />
    </svg>
  </button>
  <button
    aria-hidden="true"
    class="emotion-3"
  />
  <nav
    aria-expanded="true"
    class="emotion-4"
  >
    <button
      aria-label="Sulje valikko"
      class="emotion-5"
    >
      <svg
        aria-hidden="true"
        class="emotion-2"
      >
        <use
          xlink:href="#icon-close"
        />
      </svg>
    </button>
    <a
      class="emotion-7"
      href="/minusta/"
    >
      Minusta
    </a>
    <a
      class="emotion-7"
      href="/blogi/"
    >
      Blogi
    </a>
    <a
      class="emotion-7"
      href="/ota-yhteytta/"
    >
      Ota yhteyttä
    </a>
  </nav>
  <h2
    class="emotion-10"
    id="lauri-lavanti"
  >
    Lauri Lavanti
  </h2>
</header>
`;
